# aiobotocore-refreshable-credentials

./: .gitignore  LICENSE  README.rst  setup.cfg
.github/workflows/: deploy.yaml  testing.yaml
aiobotocore_refreshable_credentials/: __init__.py  session.py
tests/: test_get_session.py
tests/data/: missing-access-key  missing-expiration  with-expiration
