[metadata]
name = aiobotocore-refreshable-credentials
version = 1.0.2
description = Implements an aiobotocore.Session subclass for using aiobotocore with expiring credentials (IAM STS)
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = BSD 3-Clause License
license_file = LICENSE
home_page = https://github.com/aweber/aiobotocore-refreshable-credentials/
requires_dist = setuptools
author = Gavin M. Roy
author_email = gavinmroy@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications
    Topic :: Internet
    Topic :: Software Development
    Typing :: Typed

[options]
include_package_data = False
install_requires =
    aiobotocore>=1.2.2,<2
    python-dateutil>=2.8.1,<3
packages = aiobotocore_refreshable_credentials
zip_safe = true

[options.extras_require]
testing =
    bandit==1.7.0
    coverage==5.5
    flake8==3.9.0
    flake8-comprehensions==3.4.0
    flake8-deprecated==1.3
    flake8-import-order==0.18.1
    flake8-quotes==3.2.0
    flake8-rst-docstrings==0.0.14
    flake8-todo==0.7
    flake8-tuple==0.4.1
    Pygments==2.8.1

[flake8]
application-import-names = aiobotocore_refreshable_credentials,tests
exclude = build,ci,env
import-order-style = pycharm
rst-roles = attr,class,const,data,exc,func,meth,mod,obj

[coverage:run]
branch = True
command_line = -m unittest discover tests --verbose
data_file = build/.coverage

[coverage:report]
show_missing = True
include =
    aiobotocore_refreshable_credentials/*
omit =
    tests/*.py

[coverage:html]
directory = build/coverage

[coverage:xml]
output = build/coverage.xml
